<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Nombre del producto -->
    <TextView
        android:id="@+id/productoNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="250dp"
        />

    <!-- Precio del producto -->
    <TextView
        android:id="@+id/productoPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1000_clp"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/productoNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="250dp"/>

    <!-- cada producto con un contador de productos-->
    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productoNombre"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menos"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            app:cornerRadius="50dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
